[package]
name = "space_traders_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
rustyline = "13"
shell-words = "1.1"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
space-traders-sdk = { path = "/Users/collindietz/code/space-traders/space-traders-sdk" }
dirs = "5.0"
rpassword = "7.2"
directories = "6.0.0"
